PWA-ready index.html

--- a/public/planner.html
+++ b/public/planner.html
@@ -1,147 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Planner</title>
-<meta name="theme-color" content="#111827">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Ascend Planner</title>
+<link rel="stylesheet" href="style.css" />
 
 <style>
-/* ===== TOP NAV ===== */
-.top-nav {
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  background: #111827;
-  border-bottom: 1px solid #1f2937;
-  padding: 1rem;
-  font-weight: 600;
-  color: #38bdf8;
-  font-size: 1.2rem;
-  text-align: center;
+/* ---------- BASE ---------- */
+body {
+  margin: 0;
+  background: #020617;
+  color: #e5e7eb;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont;
 }
 
-/* ===== PAGE ===== */
+/* ---------- TOP NAV ---------- */
+.top-nav {
+  padding: 1rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: #38bdf8;
+  border-bottom: 1px solid #1f2937;
+  background: #020617;
+}
+
+/* ---------- PAGE ---------- */
 .page {
   padding: 1rem;
-  min-height: 100vh;
   padding-bottom: 140px;
 }
+
 .container {
   max-width: 480px;
   margin: 0 auto;
 }
 
-/* ===== CARDS ===== */
+/* ---------- CARDS ---------- */
 .card {
   background: #111827;
-  border-radius: 14px;
+  border: 1px solid #1f2937;
+  border-radius: 16px;
   padding: 1.25rem;
   margin-bottom: 1rem;
-  border: 1px solid #1f2937;
 }
 
-/* ===== INPUTS ===== */
-input, select, textarea {
+/* ---------- INPUTS (NO ZOOM FIX) ---------- */
+input,
+textarea {
   width: 100%;
-  padding: 0.75rem;
-  border-radius: 10px;
-  border: 1px solid #1f2937;
+  box-sizing: border-box;
   background: #020617;
-  color: #e5e7eb;
-  font-size: 16px;
+  border: 1px solid #1f2937;
+  border-radius: 12px;
+  padding: 0.75rem 0.9rem;
   margin-bottom: 0.75rem;
+  color: #e5e7eb;
+  font-size: 16px; /* CRITICAL: prevents mobile zoom */
 }
 
-/* ===== BUTTONS ===== */
+textarea {
+  min-height: 70px;
+  resize: vertical;
+}
+
+/* ---------- BUTTON ---------- */
 button {
   width: 100%;
-  padding: 0.75rem;
-  border-radius: 10px;
+  padding: 0.8rem;
+  border-radius: 12px;
   border: none;
   background: #38bdf8;
   color: #020617;
   font-weight: 600;
+  font-size: 1rem;
   cursor: pointer;
+}
+
+/* ---------- SCHEDULED WORKOUTS ---------- */
+.schedule-box {
   margin-top: 0.5rem;
+  max-height: 260px;        /* BIGGER */
+  overflow-y: auto;         /* SCROLLABLE */
+  padding-right: 0.25rem;
 }
 
-button.secondary {
-  background: #1f2937;
-  color: #e5e7eb;
-}
-
-/* ===== WORKOUT LIST ===== */
 .workout-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #111827;
+  background: #020617;
   border: 1px solid #1f2937;
   border-radius: 12px;
-  padding: 0.75rem;
+  padding: 0.65rem 0.75rem;
   margin-bottom: 0.5rem;
-  flex-wrap: wrap;
 }
 
-.workout-item span {
-  font-weight: 500;
-  color: #e5e7eb;
+.workout-text {
+  font-size: 0.95rem;
+  line-height: 1.3;
 }
 
-/* ===== REMOVE BUTTON ===== */
+/* ---------- REMOVE BUTTON ---------- */
 .remove-btn {
   background: transparent;
-  color: #ef4444;
   border: none;
-  font-size: 1rem;
-  font-weight: 600;
+  color: #ef4444;
+  font-size: 1.2rem;
   cursor: pointer;
-  margin-left: 0.5rem;
 }
 
-/* ===== DATE PICKER CALENDAR ===== */
-.calendar-input {
-  width: 100%;
-  padding: 0.75rem;
-  border-radius: 10px;
-  border: 1px solid #1f2937;
-  background: #020617;
-  color: #e5e7eb;
-  font-size: 16px;
-  cursor: pointer;
-  margin-bottom: 0.75rem;
-}
-
-/* ===== WORKOUT ADDITION HEADER ===== */
-.planner-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 0.75rem;
-}
-
-.planner-header h3 {
-  margin: 0;
-  color: #e5e7eb;
-}
-
-/* ===== NOTES INPUT ===== */
-#plannerWorkoutNotes {
-  min-height: 60px;
-  resize: vertical;
-  background: #020617;
-  border: 1px solid #1f2937;
-  border-radius: 10px;
-  color: #e5e7eb;
-  padding: 0.75rem;
-  font-size: 14px;
+/* ---------- EMPTY STATE ---------- */
+.empty {
+  text-align: center;
+  opacity: 0.6;
+  font-size: 0.95rem;
 }
 </style>
 </head>
+
 <body>
 
 <div class="top-nav">Ascend</div>
@@ -149,106 +127,101 @@ button.secondary {
 <div class="page">
   <div class="container">
 
-    <!-- ADD WORKOUT CARD -->
+    <!-- ADD WORKOUT -->
     <div class="card">
       <h3>Add Workout</h3>
-      <input type="text" id="plannerWorkoutName" placeholder="Workout Name" />
-      <input type="date" id="plannerWorkoutDate" class="calendar-input" />
-      <textarea id="plannerWorkoutNotes" placeholder="Add notes (optional)"></textarea>
+
+      <input
+        type="text"
+        id="plannerWorkoutName"
+        placeholder="Workout name"
+      />
+
+      <!-- REDESIGNED DATE PICKER -->
+      <input
+        type="date"
+        id="plannerWorkoutDate"
+      />
+
+      <textarea
+        id="plannerWorkoutNotes"
+        placeholder="Notes (optional)"
+      ></textarea>
+
       <button id="addPlannerWorkoutBtn">Add Workout</button>
     </div>
 
-    <!-- WORKOUT LIST CARD -->
+    <!-- SCHEDULED WORKOUTS -->
     <div class="card">
-      <div class="planner-header">
-        <h3>Scheduled Workouts</h3>
-      </div>
-      <div id="workoutList">
-        <p class="planner-empty">No workouts scheduled yet</p>
+      <h3>Scheduled Workouts</h3>
+
+      <div id="workoutList" class="schedule-box">
+        <p class="empty">No workouts scheduled</p>
       </div>
     </div>
 
   </div>
 </div>
 
-<!-- BOTTOM NAV -->
-<nav class="bottom-nav">
-  <button data-page="dashboard" onclick="location.href='dashboard.html'">
-    <span class="icon"><img src="/icons/home.png" class="nav-icon"></span>
-    <span class="label">Home</span>
-  </button>
-  <button data-page="view" onclick="location.href='view.html'">
-    <span class="icon"><img src="/icons/workout.png" class="nav-icon"></span>
-    <span class="label">Workouts</span>
-  </button>
-  <button data-page="workout" class="create-btn" onclick="location.href='workout.html'">
-    <span class="icon">＋</span>
-  </button>
-  <button data-page="stats" disabled>
-    <span class="icon"><img src="/icons/analytics.png" class="nav-icon"></span>
-    <span class="label">Analytics</span>
-  </button>
-  <button data-page="profile" disabled>
-    <span class="icon"><img src="/icons/profile.png" class="nav-icon"></span>
-    <span class="label">Profile</span>
-  </button>
-</nav>
-
 <script>
-const workoutListEl = document.getElementById('workoutList');
-let plannerData = JSON.parse(localStorage.getItem('planner')) || {};
+const workoutListEl = document.getElementById("workoutList");
+let plannerData = JSON.parse(localStorage.getItem("planner")) || {};
 
-// ===== RENDER WORKOUTS =====
+/* ---------- RENDER ---------- */
 function renderWorkouts() {
-  workoutListEl.innerHTML = '';
+  workoutListEl.innerHTML = "";
+
   const dates = Object.keys(plannerData).sort();
+
   if (dates.length === 0) {
-    workoutListEl.innerHTML = '<p class="planner-empty">No workouts scheduled yet</p>';
+    workoutListEl.innerHTML =
+      '<p class="empty">No workouts scheduled</p>';
     return;
   }
 
   dates.forEach(date => {
-    const workout = plannerData[date];
-    const div = document.createElement('div');
-    div.className = 'workout-item';
+    const w = plannerData[date];
 
-    const textSpan = document.createElement('span');
-    textSpan.innerHTML = `<strong>${workout.name}</strong> - ${date}${workout.notes ? ` | ${workout.notes}` : ''}`;
-    div.appendChild(textSpan);
+    const item = document.createElement("div");
+    item.className = "workout-item";
 
-    const removeBtn = document.createElement('button');
-    removeBtn.className = 'remove-btn';
-    removeBtn.textContent = '×';
-    removeBtn.addEventListener('click', () => {
+    const text = document.createElement("div");
+    text.className = "workout-text";
+    text.innerHTML = `<strong>${w.name}</strong><br>${date}${w.notes ? " • " + w.notes : ""}`;
+
+    const remove = document.createElement("button");
+    remove.className = "remove-btn";
+    remove.textContent = "×";
+    remove.onclick = () => {
       delete plannerData[date];
-      localStorage.setItem('planner', JSON.stringify(plannerData));
+      localStorage.setItem("planner", JSON.stringify(plannerData));
       renderWorkouts();
-    });
-    div.appendChild(removeBtn);
+    };
 
-    workoutListEl.appendChild(div);
+    item.appendChild(text);
+    item.appendChild(remove);
+    workoutListEl.appendChild(item);
   });
 }
 
-// ===== ADD WORKOUT =====
-document.getElementById('addPlannerWorkoutBtn').addEventListener('click', () => {
-  const name = document.getElementById('plannerWorkoutName').value.trim();
-  const date = document.getElementById('plannerWorkoutDate').value;
-  const notes = document.getElementById('plannerWorkoutNotes').value.trim();
+/* ---------- ADD ---------- */
+document.getElementById("addPlannerWorkoutBtn").onclick = () => {
+  const name = plannerWorkoutName.value.trim();
+  const date = plannerWorkoutDate.value;
+  const notes = plannerWorkoutNotes.value.trim();
 
-  if(!name || !date) return alert('Enter workout name and date');
+  if (!name || !date) return alert("Enter name and date");
 
   plannerData[date] = { name, notes };
-  localStorage.setItem('planner', JSON.stringify(plannerData));
+  localStorage.setItem("planner", JSON.stringify(plannerData));
 
-  document.getElementById('plannerWorkoutName').value = '';
-  document.getElementById('plannerWorkoutDate').value = '';
-  document.getElementById('plannerWorkoutNotes').value = '';
+  plannerWorkoutName.value = "";
+  plannerWorkoutDate.value = "";
+  plannerWorkoutNotes.value = "";
 
   renderWorkouts();
-});
+};
 
-// ===== INITIAL RENDER =====
 renderWorkouts();
 </script>
 
